--- a/Question2_Final_Version/Question2.html
+++ b/Question2_Final_Version/Question2.html
@@ -29,6 +29,6 @@ Model Filter
 <p id="demo">
     <body onload='myFunction3()'></body>
 </p>
-<script src="final2.js"></script>
+<script src="Question2.js"></script>
 </body>
 </html>
